--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
         </ul>
       </nav>
   </header>
+  <section class="slider-container">
+    <div class="slider">
+
+        <div class="slider-item"><img src="img/slider-2.jpg" alt="Portada CD 1"></div>
+        <div class="slider-item"><img src="img/slider-4.jpg" alt="Portada CD 2"></div>
+        <div class="slider-item"><img src="img/slider-5.jpg" alt="Portada CD 3"></div>
+        <div class="slider-item"><img src="img/slider-2.jpg" alt="Portada CD 1"></div>
+        <div class="slider-item"><img src="img/slider-4.jpg" alt="Portada CD 2"></div>
+        <div class="slider-item"><img src="img/slider-5.jpg" alt="Portada CD 3"></div>
+        
+    </div>
+  </section>
+
+  
+  
   
 
 </body>
