--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <div class="logo"><img src="img/logo.png" alt="logo" ></div>
       <nav class="nav-menu">
         <ul class="nav-list">
-          <li class="nav-item"><a href=""class="nav-link">inicio</a></li>
-          <li class="nav-item"><a href=""class="nav-link">productos</a></li>
+          <li class="nav-item"><a href="·"class="nav-link">inicio</a></li>
+          <li class="nav-item"><a href="#PRODUCTOS.html"class="nav-link">productos</a></li>
           <li class="nav-item"><a href=""class="nav-link">panel de control</a></li>
         </ul>
       </nav>
@@ -23,16 +23,16 @@
         <div class="slider-item"><img src="img/slider-2.jpg" alt="Portada CD 1"></div>
         <div class="slider-item"><img src="img/slider-4.jpg" alt="Portada CD 2"></div>
         <div class="slider-item"><img src="img/slider-5.jpg" alt="Portada CD 3"></div>
-        <div class="slider-item"><img src="img/slider-2.jpg" alt="Portada CD 1"></div>
-        <div class="slider-item"><img src="img/slider-4.jpg" alt="Portada CD 2"></div>
-        <div class="slider-item"><img src="img/slider-5.jpg" alt="Portada CD 3"></div>
-        
+        <div class="slider-item"><img src="img/silider10.jpg" alt="Portada CD 1"></div>
+        <div class="slider-item"><img src="img/slideer6.jpg" alt="Portada CD 2"></div>
+        <div class="slider-item"><img src="img/slider9.jpg" alt="Portada CD 3"></div>
     </div>
   </section>
+ 
 
   
   
   
-
+  <script src="script.js"></script>
 </body>
 </html>
