se hiso las card con js

--- a/productos.html
+++ b/productos.html
@@ -7,26 +7,21 @@
     <title>productos</title>
 </head>
 <body>
-    <section class="productos-container">
-        <div class="card-wrapper">
-          <article class="card">
-            <div class="card-header">
-              <!--encabezado-->
-              <img class="card-img" src="" alt="">
-            </div>
-            <div class="card-main">
-              <!--contenido principal-->
-            </div>
-            <div class="card-precio">
-                <!--contenido precio-->
-              </div>
-            <div class="card-button">
-              <!--bonto de compra-->
-            </div>
-          </article>
-        </div>
-      </section>
-
+  <header class="container-header">
+    <div class="logo"><img src="img/logo.png" alt="logo" ></div>
+    <nav class="nav-menu">
+      <ul class="nav-list">
+        <li class="nav-item"><a href=""class="nav-link">inicio</a></li>
+        <li class="nav-item"><a href="productos.html"class="nav-link">productos</a></li>
+        <li class="nav-item"><a href=""class="nav-link">panel de control</a></li>
+      </ul>
+    </nav>
+</header>
+ 
+  <section class="productos-container">
+   
+  </section> 
+   
 
 
 
