--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <div class="logo"><img src="img/logo.png" alt="logo" ></div>
       <nav class="nav-menu">
         <ul class="nav-list">
-          <li class="nav-item"><a href="·"class="nav-link">inicio</a></li>
-          <li class="nav-item"><a href="#PRODUCTOS.html"class="nav-link">productos</a></li>
+          <li class="nav-item"><a href="index.html"class="nav-link">inicio</a></li>
+          <li class="nav-item"><a href="productos.html"class="nav-link">productos</a></li>
           <li class="nav-item"><a href=""class="nav-link">panel de control</a></li>
         </ul>
       </nav>
@@ -36,3 +36,8 @@
   <script src="script.js"></script>
 </body>
 </html>
+
+
+
+
+
