--- a/productos.html
+++ b/productos.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="stylo.css">
     <title>productos</title>
 </head>
@@ -11,7 +13,7 @@
     <div class="logo"><img src="img/logo.png" alt="logo" ></div>
     <nav class="nav-menu">
       <ul class="nav-list">
-        <li class="nav-item"><a href=""class="nav-link">inicio</a></li>
+        <li class="nav-item"><a href="index.html"class="nav-link">inicio</a></li>
         <li class="nav-item"><a href="productos.html"class="nav-link">productos</a></li>
         <li class="nav-item"><a href=""class="nav-link">panel de control</a></li>
       </ul>
@@ -22,10 +24,29 @@
    
   </section> 
    
-
-
-
+  <!-- WhatsApp button -->
+  <div>
       
+     
+    <a href="">
+   <i class="bi bi-whatsapp"></i></a>
+    </div>
+  <!-- Footer -->
+  <footer>
+    <p class="titulo-redes">Redes Sociales</p>
+    <div class="social-links">
+      <a href="#"><i class="bi bi-facebook"></i></a>
+      <a href="#"><i class="bi bi-twitter-x"></i></a>
+      <a href="#"><i class="bi bi-instagram"></i></a>
+    </div>
+  </footer>
+
+   
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>  
  <script src="script.js"></script>
 </body>
 </html>
