--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
   <header class="container-header">
-      <div class="logo"><img src="img/logo.png" alt="logo" ></div>
+      <div class="logo"><img src="img/logo.png" alt="l                                                     ogo" ></div>
       <nav class="nav-menu">
         <ul class="nav-list">
           <li class="nav-item"><a href="index.html"class="nav-link">inicio</a></li>
           <li class="nav-item"><a href="productos.html"class="nav-link">productos</a></li>
-          <li class="nav-item"><a href=""class="nav-link">panel de control</a></li>
+          <li class="nav-item"><a href="panelDeControl.html"class="nav-link">panel de control</a></li>
         </ul>
       </nav>
   </header>
