--- a/productos.html
+++ b/productos.html
@@ -15,7 +15,7 @@
       <ul class="nav-list">
         <li class="nav-item"><a href="index.html"class="nav-link">inicio</a></li>
         <li class="nav-item"><a href="productos.html"class="nav-link">productos</a></li>
-        <li class="nav-item"><a href=""class="nav-link">panel de control</a></li>
+        <li class="nav-item"><a href="panelDeControl.html"class="nav-link">panel de control</a></li>
       </ul>
     </nav>
 </header>
@@ -26,9 +26,7 @@
    
   <!-- WhatsApp button -->
   <div>
-      
-     
-    <a href="">
+   <a href="">
    <i class="bi bi-whatsapp"></i></a>
     </div>
   <!-- Footer -->
