--- a/productos.html
+++ b/productos.html
@@ -22,16 +22,18 @@
     </nav>
 </header>
  
-  <section class="productos-container">
+   
+ 
+  <section class="disco-container">
    
   </section> 
    
-  <!-- WhatsApp button -->
+ 
   <div>
    <a href="">
    <i class="bi bi-whatsapp"></i></a>
     </div>
-  <!-- Footer -->
+ 
   <footer>
     <p class="titulo-redes">Redes Sociales</p>
     <div class="social-links">
@@ -40,13 +42,13 @@
       <a href="#"><i class="bi bi-instagram"></i></a>
     </div>
   </footer>
-
-   
+ 
 
 
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>  
- <script src="script.js"></script>
+ <script src="/js/script.js"defer></script>
+  <script src="/js/table.js"></script>
 </body>
 </html>
