ya puedo agregar las imagenes y agregue una seccion

--- a/index.html
+++ b/index.html
@@ -33,6 +33,33 @@
         <div class="slider-item"><img src="img/slider9.jpg" alt="Portada CD 3"></div>
     </div>
   </section>
+  <section class="sobre-mi">
+    <h2 class="somos">¿quienes somos....?</h2>
+    <div class="somos-texto">
+      <p class="texto intro"> 
+
+<em> Nosotros</em>
+En Vinilo y Fuego , nuestra historia es la misma que la tuya: una pasión inagotable por el rock, el punk y el metal. Desde 2010, hemos sido el corazón latente de la escena musical en Buenos Aires, ubicadas en el vibrante barrio de Palermo. No somos solo una tienda de discotecas, somos un refugio para los que entienden que el sonido de una guitarra distorsionada es el verdadero lenguaje universal.
+
+<br><em>Nuestro Legado</em> 
+A lo largo de nuestros más de 15 años de experiencia, hemos curado una colección que es el testamento de una cultura. Recorrimos el mundo para traer a nuestros estantes ediciones exclusivas, clásicos inmortales y lo más reciente del rock internacional y el metal. Aquí encontrarás desde el grunge de Seattle, el rock progresivo británico, el black metal noruego, hasta las joyas más raras del stoner rock y el metal de la Bay Area. Cada vinilo, CD y cassette ha sido elegido con el cuidado de un verdadero fanático.
+
+<br><em>Un futuro sonoro</em>
+Pero nuestro viaje no termina aquí. Próximamente, Vinilo y Fuego se expandirá para convertirse en un centro cultural completo. Estamos listos para empezar a generar eventos, desde shows íntimos de bandas emergentes hasta charlas con figuras icónicas del rock local. Además, nuestra tienda crecerá para ofrecer una selecta línea de instrumentos musicales de alta calidad, equipando a la próxima generación de músicos.
+
+Te invitamos a visitarnos en la calle Santa Fe 2345 ya ser parte de nuestra historia. Porque en Vinilo y Fuego , la música no es solo un negocio: es nuestra forma de vida.
+
+
+
+
+
+
+
+
+</p>
+    </div>
+
+  </section>
 
  
   
