--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
  
   <header class="container-header">
       <div class="logo"><img src="img/logo.png" alt="logo" ></div>
+      <input type="checkbox" id="menu-toggle">
+    <label for="menu-toggle" class="hamburger">&#9776;</label>
       <nav class="nav-menu">
         <ul class="nav-list">
           <li class="nav-item"><a href="index.html"class="nav-link">inicio</a></li>
