--- a/panelDeControl.html
+++ b/panelDeControl.html
@@ -12,6 +12,8 @@
 <body>
    <header class="container-header">
         <div class="logo"><img src="img/logo.png" alt="logo" ></div>
+        <input type="checkbox" id="menu-toggle">
+    <label for="menu-toggle" class="hamburger">&#9776;</label>
         <nav class="nav-menu">
           <ul class="nav-list">
             <li class="nav-item"><a href="index.html"class="nav-link">inicio</a></li>
@@ -29,7 +31,7 @@
        <div class="col-12 col-lg-4 col-sm-2 poner-disc">
 
         <div class="formuario-alta-de-disco"> 
-       <h2 class="titulo-usuario-carga">carga de usuario</h2>
+       <h2 class="titulo-usuario-carga">carga tu banda!!!!</h2>
        <form  id="disco-form">
          <div class="subir-disco">
           <label for="image" class="full-label">url</label>
